--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>João perdeu as pregas hoje?</title>
+	<title>QUESTÃO IMPORTANTE?</title>
 	<style>
         button {
             width: 100%;
