ajuste botao nao

--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -68,6 +68,11 @@
             body {
                 font-size: 14px;
             }
+
+            #nao {
+                margin-top: 50px;
+            }
+
         }
 	</style>
 </head>
