--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -72,7 +72,6 @@
             #nao {
                 margin-top: 70px;
             }
-
         }
 	</style>
 </head>
@@ -81,11 +80,18 @@
         <h1>Devo ROMANCE VIDOCA? RSRSRSRS </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
+        <div id="agradecimento" style="display: none;">RSRSRSRSRS KERO</div>
     </div>
 	<script>
+        const simButton = document.getElementById("sim");
+        const agradecimentoDiv = document.getElementById("agradecimento");
+
+        simButton.addEventListener("click", function() {
+            agradecimentoDiv.style.display = "block";
+        });
+
 		const naoButton = document.getElementById("nao");
 
-		// Adiciona o evento de movimento do mouse ou dedo na tela
 		document.addEventListener("mousemove", handleMouseMove);
 		document.addEventListener("touchmove", handleMouseMove);
 
