--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Devo ROMANCE VIDOCA? RSRSRSRS </h1>
+        <h1> ROMANCE VIDOCA? RSRSRSRS </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
         <div id="agradecimento" style="display: none;">RSRSRSRSRS KERO</div>
