--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -70,14 +70,15 @@
             }
 
             #nao {
-                margin-top: 70px;
+                margin-top: 10px;
+                order: 2;
             }
         }
 	</style>
 </head>
 <body>
     <div class="container">
-        <h1> ROMANCE VIDOCA? RSRSRSRS </h1>
+        <h1>Devo ROMANCE VIDOCA? RSRSRSRS </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
         <div id="agradecimento" style="display: none;">RSRSRSRSRS KERO</div>
