--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -78,10 +78,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>ROMANCE VIDOCA? RSRSRSRS </h1>
+        <h1>VAMO BEIJA NA BOCA VIDOCA? RSRSRSRSR ? RSRSRSRS </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
-        <div id="agradecimento" style="display: none;">RSRSRSRSRS KERO</div>
+        <div id="agradecimento" style="display: none;">RSRSRSRSRS OPA QUANDO ? RSRSRSRS </div>
     </div>
 	<script>
         const simButton = document.getElementById("sim");
