--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -69,9 +69,12 @@
                 font-size: 14px;
             }
 
+            .container {
+                flex-direction: column-reverse; /* Inverter a ordem dos elementos no contêiner */
+            }
+            
             #nao {
                 margin-top: 10px;
-                order: 2;
             }
         }
 	</style>
