--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -75,7 +75,7 @@
 
             #nao {
                 margin-top: 10px;
-                order: 2;
+                order: 3; /* Mudar a ordem no mobile */
             }
         }
 	</style>
@@ -84,8 +84,8 @@
     <div class="container">
         <h1>VAMO BEIJA NA BOCA VIDOCA? RSRSRSRSR ? RSRSRSRS </h1>
         <button id="sim">Sim</button>
-        <div id="agradecimento" style="display: none;">RSRSRSRSRS OPA QUANDO ? RSRSRSRS </div>
         <button id="nao">Nao</button>
+        <div id="agradecimento" style="display: none;">RSRSRSRSRS OPA QUANDO ? RSRSRSRS </div>
     </div>
 	<script>
         const simButton = document.getElementById("sim");
