--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -84,7 +84,9 @@
     <div class="container">
         <h1>VAMO BEIJA NA BOCA VIDOCA? RSRSRSRSR ? RSRSRSRS </h1>
         <button id="sim">Sim</button>
-        <button id="nao">Nao</button>
+	<div>  
+	        <button id="nao">Nao</button>
+	</div>	
         <div id="agradecimento" style="display: none;">RSRSRSRSRS OPA QUANDO ? RSRSRSRS </div>
     </div>
 	<script>
