--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -81,10 +81,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>VAMO BEIJA NA BOCA VIDOCA? </h1>
+        <h1>A VICTORIA É NOIA? </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
-        <div id="agradecimento" style="display: none;">RSRSRSRSRS OPA QUANDO ? RSRSRSRS </div>
+        <div id="agradecimento" style="display: none;">RSRSRSRSRS CONCORDO </div>
     </div>
 	<script>
         const simButton = document.getElementById("sim");
