--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -82,7 +82,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>A VICTORIA É NOIA? </h1>
+        <h1>A GUI É NOIA? </h1>
         <button id="sim">Sim</button>
         <button id="nao">Nao</button>
         <div id="agradecimento" style="display: none;">RSRSRSRSRS CONCORDO </div>
