--- a/abra_aqui_logo.html
+++ b/abra_aqui_logo.html
@@ -2,67 +2,68 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>QUESTÃO IMPORTANTE?</title>
-	<style>
+    <title>QUESTÃO IMPORTANTE?</title>
+    <style>
         button {
             width: 100%;
             max-width: 200px;
             height: auto;
         }
 
-		#nao {
-			position: absolute;
-			top: 65%;
-			left: 49%;
-			transform: translate(-50%, -50%);
-			transition: all 0.3s ease-out;
-		}
-		#nao:hover {
-			cursor: pointer;
-		}
+        #nao {
+            position: absolute;
+            top: 65%;
+            left: 49%;
+            transform: translate(-50%, -50%);
+            transition: all 0.3s ease-out;
+        }
 
-		body {
-			background-color: #f0f0f0;
-			font-family: Arial, sans-serif;
-			font-size: 16px;
-			margin: 0;
-			padding: 0;
-		}
+        #nao:hover {
+            cursor: pointer;
+        }
 
-		.container {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			height: 100vh;
-		}
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            margin: 0;
+            padding: 0;
+        }
 
-		button {
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 10px 20px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			margin: 10px;
-			cursor: pointer;
-			border-radius: 5px;
-			transition: all 0.3s ease-out;
-		}
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
 
-		button:hover {
-			background-color: #3e8e41;
-		}
+        button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: all 0.3s ease-out;
+        }
 
-		#nao {
-			background-color: #f44336;
-		}
+        button:hover {
+            background-color: #3e8e41;
+        }
 
-		#nao:hover {
-			background-color: #d32f2f;
-		}
+        #nao {
+            background-color: #f44336;
+        }
+
+        #nao:hover {
+            background-color: #d32f2f;
+        }
 
         @media only screen and (max-width: 600px) {
             body {
@@ -70,15 +71,14 @@
             }
 
             .container {
-                flex-direction: column; /* Deixar a ordem padrão no mobile */
+                flex-direction: column;
             }
 
             #nao {
                 margin-top: 35px;
-		
             }
         }
-	</style>
+    </style>
 </head>
 <body>
     <div class="container">
@@ -87,7 +87,7 @@
         <button id="nao">Nao</button>
         <div id="agradecimento" style="display: none;">RSRSRSRSRS CONCORDO </div>
     </div>
-	<script>
+    <script>
         const simButton = document.getElementById("sim");
         const agradecimentoDiv = document.getElementById("agradecimento");
 
@@ -95,14 +95,20 @@
             agradecimentoDiv.style.display = "block";
         });
 
-		const naoButton = document.getElementById("nao");
+        const naoButton = document.getElementById("nao");
 
-		document.addEventListener("mousemove", handleMouseMove);
-		document.addEventListener("touchmove", handleMouseMove);
+        document.addEventListener("touchstart", function(event) {
+            event.preventDefault(); // Evitar comportamento padrão do toque
+            naoButton.style.transition = "none"; // Desativar a transição para uma resposta mais rápida ao toque
+            handleTouchMove(event);
+        });
 
-		function handleMouseMove(event) {
-            const x = event.clientX || event.touches[0].clientX;
-            const y = event.clientY || event.touches[0].clientY;
+        document.addEventListener("touchmove", handleTouchMove);
+
+        function handleTouchMove(event) {
+            const touch = event.touches[0];
+            const x = touch.clientX;
+            const y = touch.clientY;
             const buttonWidth = naoButton.offsetWidth;
             const buttonHeight = naoButton.offsetHeight;
             const maxX = window.innerWidth - buttonWidth;
@@ -110,10 +116,7 @@
             const newX = Math.floor(Math.random() * (maxX + 1));
             const newY = Math.floor(Math.random() * (maxY + 1));
 
-            let maxDistance = 100; // Valor padrão
-            if (window.innerWidth <= 600) {
-                maxDistance = 50; // Valor menor para dispositivos móveis
-            }
+            let maxDistance = 50;
 
             const distance = Math.sqrt((x - naoButton.offsetLeft - buttonWidth / 2) ** 2 + (y - naoButton.offsetTop - buttonHeight / 2) ** 2);
             if (distance < maxDistance) {
@@ -121,6 +124,6 @@
                 naoButton.style.top = newY + "px";
             }
         }
-	</script>
+    </script>
 </body>
 </html>
